--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <div class="calculator">
-        <h1 style="text-align: center; padding: 20px; font-family: 'Poppins',sans-serif;">Calculator</h1>
         <div class="display">
-            <input type="text" id="result" disabled>
+            <input type="text" placeholder="88888888888888888" id="result" disabled>
         </div>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
@@ -33,9 +32,9 @@
             <button onclick="append('00')">00</button>
             <button onclick="append('0')">0</button>
             <button onclick="append('.')">.</button>
-            <button onclick="calculate()">=</button>
+            <button onclick="calculate()" style="background-color: rgb(255, 165, 0);">=</button>
         </div>
-        <p style="text-align: center;color: cornflowerblue; background: lightgray;font-size: 1rem;font-weight: 900;margin-top: 200px;">A Product Designed By Mohammed Rafeeq<i class="fa-duotone fa-solid fa-heart"></i></p>
+        <p style="background-color: black; color: rgb(135, 133, 133);margin: 0px;font-size: .7rem;padding: 1rem;padding-left: 2rem;">𝔸 𝕡𝕣𝕠𝕕𝕦𝕔𝕥 𝕠𝕗 𝕔𝕠𝕕𝕖, 𝕕𝕖𝕤𝕚𝕘𝕟𝕖𝕕 𝕓𝕪 ℤ𝕒𝕞𝕖𝕖𝕣</p>
     </div>
     <script src="script.js"></script>
 </body>
