--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator Website</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/158d75eb0e.js" crossorigin="anonymous"></script>
 </head>
